--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -256,7 +256,7 @@
     <string name="device_info_label" msgid="6551553813651711205">"Info o zařízení"</string>
     <string name="battery_info_label" msgid="4132685016148679403">"Info o baterii"</string>
     <string name="display_label" msgid="8074070940506840792">"Displej"</string>
-    <string name="phone_info_label" product="tablet" msgid="7820855350955963628">"Informace o tabletu"</string>
+    <string name="phone_info_label" product="tablet" msgid="7820855350955963628">"Informace o čtečce"</string>
     <string name="phone_info_label" product="default" msgid="2127552523124277664">"Info o telefonu"</string>
     <string name="sd_card_settings_label" product="nosdcard" msgid="8101475181301178428">"Úložiště USB"</string>
     <string name="sd_card_settings_label" product="default" msgid="5743100901106177102">"Karta SD"</string>
@@ -283,7 +283,7 @@
     <string name="date_and_time_settings_title" msgid="3350640463596716780">"Datum a čas"</string>
     <string name="date_and_time_settings_title_setup_wizard" msgid="2391530758339384324">"Nastavit datum a čas"</string>
     <string name="date_and_time_settings_summary" msgid="7095318986757583584">"Umožňuje nastavit datum, čas, časové pásmo a formát"</string>
-    <string name="date_time_auto" msgid="7076906458515908345">"Automatický datum a čas"</string>
+    <string name="date_time_auto" msgid="7076906458515908345">"nastavení pouze automaticky přes Wi-Fi"</string>
     <string name="date_time_auto_summaryOn" msgid="4609619490075140381">"Použít čas ze sítě"</string>
     <string name="date_time_auto_summaryOff" msgid="8698762649061882791">"Použít čas ze sítě"</string>
     <string name="zone_auto" msgid="334783869352026648">"Automatické čas. pásmo"</string>
@@ -657,7 +657,6 @@
     <string name="wifi_tether_configure_ap_text" msgid="61237027772641155">"Nastavit hotspot sítě Wi-Fi"</string>
     <string name="wifi_tether_configure_subtext" msgid="1927454307836232128">"Přenosný hotspot Wi-Fi <xliff:g id="NETWORK_SSID">%1$s</xliff:g> <xliff:g id="NETWORK_SECURITY">%2$s</xliff:g>"</string>
     <string name="wifi_tether_configure_ssid_default" msgid="8467525402622138547">"AndroidHotspot"</string>
-    <string name="display_settings_title" msgid="1708697328627382561">"Zobrazení"</string>
     <string name="sound_settings" msgid="5534671337768745343">"Zvuk"</string>
     <string name="ringtone_title" msgid="5379026328015343686">"Vyzváněcí tón telefonu"</string>
     <string name="ringtone_summary" msgid="2630023412632683493"></string>
@@ -708,13 +707,12 @@
     <string name="account_settings" msgid="6403589284618783461">"Účty"</string>
     <string name="search_settings" msgid="1910951467596035063">"Vyhledávání"</string>
     <string name="search_settings_summary" msgid="9205656546570654169">"Správa nastavení a historie vyhledávání"</string>
-    <string name="display_settings" msgid="7965901687241669598">"Displej"</string>
     <string name="accelerometer_title" msgid="7854608399547349157">"Autom. otočení obrazovky"</string>
     <string name="accelerometer_summary_on" product="tablet" msgid="429982132339828942">"Při otáčení tabletu automaticky přepínat orientaci"</string>
     <string name="accelerometer_summary_on" product="default" msgid="1133737282813048021">"Při otáčení telefonu automaticky přepínat orientaci"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="4781734213242521682">"Při otáčení tabletu automaticky přepínat orientaci"</string>
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Při otáčení telefonu automaticky přepínat orientaci"</string>
-    <string name="brightness" msgid="2354961343555249270">"Jas"</string>
+    <string name="brightness" msgid="2354961343555249270">"Podsvícení"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Nastavení jasu displeje"</string>
     <string name="screen_timeout" msgid="4351334843529712571">"Režim spánku"</string>
     <string name="screen_timeout_summary" msgid="327761329263064327">"Doba nečinnosti: <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>"</string>
@@ -904,7 +902,7 @@
     <string name="erase_external_storage" product="default" msgid="1397239046334307625">"Smazat kartu SD"</string>
     <string name="erase_external_storage_description" product="nosdcard" msgid="4728558173931599429">"Smazat všechna data v interním úložišti USB, například hudbu a fotografie."</string>
     <string name="erase_external_storage_description" product="default" msgid="1737638779582964966">"Smazat všechna data na kartě SD, například hudbu a fotografie."</string>
-    <string name="master_clear_button_text" product="tablet" msgid="3130786116528304116">"Resetovat tablet"</string>
+    <string name="master_clear_button_text" product="tablet" msgid="3130786116528304116">"Tovární nastavení"</string>
     <string name="master_clear_button_text" product="default" msgid="7550632653343157971">"Resetovat telefon"</string>
     <string name="master_clear_final_desc" msgid="7209547812233487345">"Chcete smazat všechny osobní informace a stažené aplikace? Tuto akci nelze vrátit zpět."</string>
     <string name="master_clear_final_button_text" msgid="5390908019019242910">"Odstranit vše"</string>
@@ -969,7 +967,7 @@
     <string name="location_access_title" msgid="7064108942964081243">"Přístup k údajům o mé poloze"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Povolit aplikacím, které o to požádaly, používat údaje o poloze"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Zdroje polohy"</string>
-    <string name="about_settings" product="tablet" msgid="593457295516533765">"Informace o tabletu"</string>
+    <string name="about_settings" product="tablet" msgid="593457295516533765">"Informace o čtečce"</string>
     <string name="about_settings" product="default" msgid="1743378368185371685">"Info o telefonu"</string>
     <string name="about_settings_summary" msgid="3371517697156165959">"Zobrazí právní informace, stav a verzi softwaru"</string>
     <string name="legal_information" msgid="5769301644270604095">"Právní informace"</string>
@@ -1178,8 +1176,8 @@
     <string name="runningservicedetails_stop_dlg_title" msgid="4253292537154337233">"Zastavit systémovou službu?"</string>
     <string name="runningservicedetails_stop_dlg_text" product="tablet" msgid="3371302398335665793">"Pokud tuto službu zastavíte, může se stát, že některé funkce telefonu nebudou fungovat správně, dokud telefon nevypnete a opět nezapnete."</string>
     <string name="runningservicedetails_stop_dlg_text" product="default" msgid="3920243762189484756">"Pokud tuto službu zastavíte, může se stát, že některé funkce tabletu nebudou fungovat správně, dokud telefon nevypnete a opět nezapnete."</string>
-    <string name="language_settings" msgid="5292716747264442359">"Jazyk a zadávání"</string>
-    <string name="language_keyboard_settings_title" msgid="243220021717425813">"Jazyk a zadávání"</string>
+    <string name="language_settings" msgid="5292716747264442359">"Jazyk a klávesnice"</string>
+    <string name="language_keyboard_settings_title" msgid="243220021717425813">"Jazyk a klávesnice"</string>
     <string name="language_settings_category" msgid="2288258489940617043">"Nastavení jazyka"</string>
     <string name="keyboard_settings_category" msgid="8275523930352487827">"Klávesnice a metody zadávání"</string>
     <string name="phone_language" msgid="8870144109924299673">"Jazyk"</string>
@@ -1466,7 +1464,7 @@
     <string name="gadget_bluetooth" msgid="8998572807378694410">"Bluetooth"</string>
     <string name="gadget_gps" msgid="1558173602059236567">"GPS"</string>
     <string name="gadget_sync" msgid="858895763714222152">"Synchronizace"</string>
-    <string name="gadget_brightness_template" msgid="930541920933123603">"Jas <xliff:g id="ID_1">%1$s</xliff:g>"</string>
+    <string name="gadget_brightness_template" msgid="930541920933123603">"Podsvícení <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="gadget_brightness_state_auto" msgid="6667967252426515446">"automaticky"</string>
     <string name="gadget_brightness_state_full" msgid="6814570109772137631">"úplný"</string>
     <string name="gadget_brightness_state_half" msgid="3696671957608774204">"poloviční"</string>
@@ -1830,4 +1828,30 @@
     <string name="user_picture_title" msgid="7297782792000291692">"ID fotografie"</string>
     <string name="cell_broadcast_settings" msgid="8415582011920085222">"Hromadné zasílání zpráv v rámci buňky"</string>
     <string name="cell_broadcast_settings_summary" msgid="3301339398950905913">"Vyberte typy mimořádných upozornění, která chcete zobrazovat."</string>
+
+    <string name="select_wifi_category">Dostupné sítě</string>
+    <string name="my_account_settings_title">Účty</string>
+    <string name="shutdown_delay">Automatické vypínání</string>
+    <string name="norwayapp_settings">Všechny</string>
+    <string name="font_setting">Správa fontů</string>
+    <string name="setfont_summary">Nastavit výchozí font</string>
+    <string name="current_font">Současný</string>
+    <string name="systemupdate">Akutalizace systému</string>
+    <string name="font_preview">Předloha:</string>
+    <string name="after_replace">Nahradit</string>
+    <string name="font_set_error">Nastavení fontu selhalo</string>
+    <string name="font_default">Výchozí nastavení</string>
+    <string name="statusbar_setting">Navigační řádek</string>
+    <string name="statusbar_summary_on">Displej</string>
+    <string name="statusbar_summary_off">Schovat</string>
+    <string name="display_settings">Uživatelské nastavení</string>
+    <string name="setlauncher_app">Upravit aplikace</string>
+    <string name="volume_buttons_setting">Nastavení hlasitosti kláves</string>
+    <string name="volume_buttons_on">Oteřít</string>
+    <string name="volume_buttons_off">Zavřít</string>
+    <string name="pic_recover">Vrátí na výchozí</string>
+    <string name="fullscreen_flush">překreslení celé obrazovky - počet stran</string>
+    <string name="open_epub_setting">výchozí čtečka pro soubory ePUB</string>
+    <string name="open_epub_withPDF">Použít Adobe</string>
+    <string name="open_epub_withFB2">Použít FB2</string>
 </resources>
