--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4455,6 +4455,20 @@
     <string name="set_resolution_failed_message">Failed to change display mode.</string>
     <string name="dlg_confirm_reboot_title">Reboot</string>
     <string name="dlg_confirm_reboot_text">System will reboot to change display mode.</string>
+    <string name="settings_license_google">Google legal information</string>
+    <string name="back_label">Back</string>
+    <string name="select_wifi_category">Select Nets</string>
+    <string name="my_account_settings_title">Accounts management</string>
+    <string name="adobe_account_setting">Adobe DRM Setting</string>
+    <string name="drm_active">DRM Activation</string>
+    <string name="myidentity_title">Account:</string>
+    <string name="mypassword_title">Password:</string>
+    <string name="logout">Logout</string>
+    <string name="drm_settings_information">Tips</string>
+    <string name="drm_settings_activite_successfully">Adobe DRM activation successful !</string>
+    <string name="drm_settings_disactivite_successfully">Adobe DRM logout successful !</string>
+    <string name="drm_settings_activite_failed">Adobe DRM activation failed !</string>
+    <string name="drm_settings_null">You must enter the id or password !</string>
     <string name="shutdown_delay">Shutdown</string>
     <string name="norwayapp_settings">All apps</string>
     <string name="font_setting">Font management</string>
